--- a/deployment.yaml
+++ b/deployment.yaml
@@ -17,3 +17,24 @@ spec:
           image: ayushd1707/guestbook:latest
           ports:
             - containerPort: 5000
+          env:
+            - name: DB_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: guestbook-secret
+                  key: host
+            - name: DB_USER
+              valueFrom:
+                secretKeyRef:
+                  name: guestbook-secret
+                  key: user
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: guestbook-secret
+                  key: password
+            - name: DB_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: guestbook-secret
+                  key: dbname
